<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fifteen Twenty</string>

    <string name="fragment_home_title">Fifteen Twenty</string>
    <string name="fragment_home_button_play">Play</string>
    <string name="fragment_home_button_records">Game Records</string>
    <string name="fragment_home_toolbar_menu_settings">Settings</string>
    <string name="fragment_home_toolbar_menu_exit">Exit</string>

    <string name="fragment_opponent_title">Choose an Opponent</string>

    <string name="fragment_game_choices_title">Choices for Round %1$d</string>
    <string name="fragment_game_choices_button_hand_left">Left Hand</string>
    <string name="fragment_game_choices_button_hand_right">Right Hand</string>
    <string name="fragment_game_choices_text_guess">Your Guess</string>
    <string name="fragment_game_choices_button_next">Confirm Choices</string>
    <string name="fragment_game_choices_error_unknown_host">Unable to connect to the server.</string>
    <string name="fragment_game_choices_error_databind">Received malformed data from server.</string>

    <string name="fragment_game_round_title">Round %1$d</string>
    <string name="fragment_game_round_text_hands_opponent">%1$s’s Hands</string>
    <string name="fragment_game_round_text_hands_player">Your Hands</string>
    <string name="fragment_game_round_text_guess_opponent">%1$s’s Guess: %2$s</string>
    <string name="fragment_game_round_text_guess_player">Your Guess: %1$s</string>
    <string name="fragment_game_round_text_result_win">You Win!</string>
    <string name="fragment_game_round_text_result_lose">You Lose…</string>
    <string name="fragment_game_round_button_next">Next Round</string>
    <string name="fragment_game_round_button_finish">Finish Game</string>

    <string name="fragment_records_title">Game Records</string>
    <string name="fragment_records_text_no_records">No Records</string>

    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_message_records_cleared">All game records was deleted.</string>

    <plurals name="adapter_record_text_result_won">
        <item quantity="one">You defeated %1$s in %2$s round.</item>
        <item quantity="other">You defeated %1$s in %2$s rounds.</item>
    </plurals>
    <plurals name="adapter_record_text_result_lost">
        <item quantity="one">You lost to %1$s in %2$d round.</item>
        <item quantity="other">You lost to %1$s in %2$d rounds.</item>
    </plurals>

    <string name="dialog_exit_title">Confirm Exit?</string>
    <string name="dialog_exit_message">Do you want to return to the home page? All your progress will be lost!</string>
    <string name="dialog_exit_action_yes">Yes</string>
    <string name="dialog_exit_action_no">No</string>

    <string name="dialog_clear_records_title">Warning</string>
    <string name="dialog_clear_records_message">All saved game records will be deleted. Are you sure?</string>
    <string name="dialog_clear_records_action_yes">Yes</string>
    <string name="dialog_clear_records_action_no">No</string>

    <string name="toolbar_navigation_back">Back</string>
    <string name="toolbar_navigation_exit">Exit</string>

    <string name="snackbar_action_retry">Retry</string>

</resources>
